# eyelite

./: Cargo.toml  LICENSE.md  Makefile  README.md  demo.html  examples-output.n3  eyeling.js  eyeling.py  index.js  mkeyeling  package.json
.github/workflows/: publish-npm.yml
examples/: backward.n3  brussels-brew-club.n3  cat-koko.n3  collect-all-in.n3  control-system.n3  crypto-builtins-tests.n3  deep-taxonomy-10.n3  deep-taxonomy-100.n3  deep-taxonomy-1000.n3  deep-taxonomy-10000.n3  deep-taxonomy.n3  derived-backward-rule-2.n3  derived-backward-rule.n3  derived-rule.n3  dijkstra.n3  drone-corridor-planner-v2.n3  drone-corridor-planner.n3  equals.n3  fibonacci.n3  for-all-in.n3  french-cities.n3  french_cities.n3  fuse.n3  good-cobbler.n3  gray-code-counter.n3  list-builtins-tests.n3  lldm.n3  math-builtins-tests.n3  minimal-skos-alignment.n3  monkey.n3  odrl-trust.n3  oslo-steps-library-scholarly.n3  oslo-steps-workflow-composition.n3  peano.n3  polygon.n3  reordering.n3  rule-matching.n3  self-referential.n3  similar.n3  skolem.n3  (+8 more)
examples/output/: age.n3  alignment-demo.n3  backward.n3  basic-monadic.n3  brussels-brew-club.n3  cat-koko.n3  cobalt-kepler-kitchen.n3  collect-all-in.n3  complex.n3  control-system.n3  cranberry-calculus.n3  crypto-builtins-tests.n3  deep-taxonomy-10.n3  deep-taxonomy-100.n3  deep-taxonomy.n3  derived-backward-rule-2.n3  derived-backward-rule.n3  dog.n3  (+54 more)
src/: ast.rs  lib.rs  main.rs  n3.pest  normalize.rs  parser.rs  reasoner.rs  resolve.rs
test/: api.test.js  examples.test.js  package-smoke.sh  package.test.js  packlist.test.js
