[package]
name = "eyeling"
version = "0.1.3"
edition = "2021"
description = "A minimal Notation3 (N3) reasoner in Rust."
license = "MIT"
repository = "https://github.com/eyereasoner/eyeling"
readme = "README.md"
homepage = "https://eyereasoner.github.io/eyeling/"
keywords = ["n3", "rdf", "reasoner", "semantic-web"]
categories = ["parsing", "science", "text-processing"]

[dependencies]
chrono = "0.4"
num-bigint = "0.4"

